--- a/.github/workflows/elefant.yml
+++ b/.github/workflows/elefant.yml
@@ -6,5 +6,5 @@ jobs:
     - uses: actions/checkout@v3
     - run: |
         df -h
-        make
-        doMoreStuff 
+        mount
+        blkid
