--- a/.github/workflows/elefant.yml
+++ b/.github/workflows/elefant.yml
@@ -6,5 +6,9 @@ jobs:
     - uses: actions/checkout@v3
     - run: |
         df -h
+        ls -laR /mnt
+        fdisk -l /dev/sda
+        fdisk -l /dev/sdb
+        ls -la /dev
         mount
         blkid
