--- a/.github/workflows/elefant.yml
+++ b/.github/workflows/elefant.yml
@@ -6,6 +6,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: |
         set +e
+        python -c "import yaml"
         df -h
         swapon -s
         ls -laR /mnt
