--- a/.github/workflows/elefant.yml
+++ b/.github/workflows/elefant.yml
@@ -4,4 +4,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: rafaelgieschke/test3@@
+    - uses: rafaelgieschke/test3@HEAD
