--- a/.github/workflows/elefant.yml
+++ b/.github/workflows/elefant.yml
@@ -6,6 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - run: |
+        ls -la /home/runner/runners/*/externals/
+        which node
+        node --version
     - run: env
     - run: |
         set +e
