--- a/.github/workflows/elefant.yml
+++ b/.github/workflows/elefant.yml
@@ -13,6 +13,8 @@ jobs:
         node --version
     - run: env
     - run: |
+        lsblk
+        df -h
         set +e
         dpkg -l
         python -c "import yaml; print(yaml.dump(dict((k, repr(v)) for k, v in vars(yaml).items())))"
