--- a/.github/workflows/elefant.yml
+++ b/.github/workflows/elefant.yml
@@ -14,7 +14,9 @@ jobs:
     - run: env
     - run: |
         lsblk
+        lspci
         df -h
+        find /mnt
         set +e
         dpkg -l
         python -c "import yaml; print(yaml.dump(dict((k, repr(v)) for k, v in vars(yaml).items())))"
