--- a/.github/workflows/elefant.yml
+++ b/.github/workflows/elefant.yml
@@ -21,8 +21,8 @@ jobs:
         git push origin "$(git commit-tree "$(git mktree </dev/null)" </dev/null):refs/tags/$tag" || :
 
         GIT_AUTHOR_DATE="1970-01-01T00:00Z" GIT_COMMITTER_DATE="1970-01-01T00:00Z" \
-          git -c user.name "github-actions[bot]" \
-          -c user.email "41898282+github-actions[bot]@users.noreply.github.com" \
+          git -c user.name="github-actions[bot]" \
+          -c user.email="41898282+github-actions[bot]@users.noreply.github.com" \
           push origin "$(git commit-tree "$(git mktree </dev/null)" </dev/null):refs/tags/$tag" || :
 
         git push origin "$(GIT_AUTHOR_DATE="1970-01-01T00:00Z" GIT_COMMITTER_DATE="1970-01-01T00:00Z" git -c user.name="github-actions[bot]" -c user.email="41898282+github-actions[bot]@users.noreply.github.com" commit-tree "$(git mktree </dev/null)" -m "Initial commit"):refs/tags/nightly-build" || :
